Stop contributors with long single-word names from overflowing contributor list area.

--- a/website/static/css/projectorganizer.css
+++ b/website/static/css/projectorganizer.css
@@ -238,6 +238,10 @@ div.project-details {
 
 }
 
+div.contributors {
+    overflow-x: hidden;
+}
+
 div.project-details span.title {
     overflow-x: hidden;
 }
